kustomize/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
      containers:
        - name: wordpress
          image: wordpress:php7.4-fpm-alpine
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: php-config-volume
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
            - name: var-www
              mountPath: /var/www/html
          resources:
            requests:
              cpu: 400m
              memory: 400Mi
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 15
            periodSeconds: 20
        - name: nginx
          image: nginx:1.20.1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: wordpress-nginx-config-volume
              mountPath: /etc/nginx/conf.d
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: var-www
              mountPath: /var/www/html
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: wordpress-nginx-config-volume
          configMap:
            name: wordpress-nginx-config
        - name: php-config-volume
          configMap:
            name: php-config
        - name: var-www
          persistentVolumeClaim:
            claimName: wordpress
