kustomize/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: wordpress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - $(DOMAIN)
    tls:
      mode: SIMPLE
      credentialName: $(CERT)
    port:
      name: https
      number: 443
      protocol: HTTPS
  - hosts:
    - $(DOMAIN)
    tls:
      httpsRedirect: true
    port:
      name: http
      number: 80
      protocol: HTTP
